<resources>
    <string name="app_name">BinaryCalculator</string>

    <string name="action_settings">Settings</string>
    <string name="plus_key">+</string>
    <string name="minus_key">-</string>
    <string name="times_key">×</string>
    <string name="zero_key">0</string>
    <string name="one_key">1</string>
    <string name="equals_key">=</string>
    <string name="clear_key">C</string>
    <string name="maximum_length">10</string>
</resources>
